--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -19,8 +19,8 @@
       <div class="login-form" id="loginForm">
         <h2>Sign In</h2>
         <form id="loginFormElement">
-          <input type="email" id="email" placeholder="Email" required>
-          <input type="password" id="password" placeholder="Password" required>
+          <input type="email" id="email" placeholder="Email" value="matart15@gmail.com" required>
+          <input type="password" id="password" placeholder="Password" value="Ab123456" required>
           <button type="submit" class="btn-primary">Sign In</button>
         </form>
         <p>Don't have an account? <a href="#" id="showSignup">Sign up</a></p>
@@ -30,9 +30,9 @@
         <h2>Sign Up</h2>
         <form id="signupFormElement">
           <input type="text" id="signupName" placeholder="Full Name" required>
-          <input type="email" id="signupEmail" placeholder="Email" required>
-          <input type="password" id="signupPassword" placeholder="Password" required>
-          <input type="password" id="signupConfirmPassword" placeholder="Confirm Password" required>
+          <input type="email" id="signupEmail" placeholder="Email" value="matart15@gmail.com" required>
+          <input type="password" id="signupPassword" placeholder="Password" value="Ab123456" required>
+          <input type="password" id="signupConfirmPassword" placeholder="Confirm Password" value="Ab123456" required>
           <button type="submit" class="btn-primary">Sign Up</button>
         </form>
         <p>Already have an account? <a href="#" id="showLogin">Sign in</a></p>
@@ -81,7 +81,9 @@
     </div>
   </div>
 
-  <script src="popup.js"></script>
+  <script src="./supabase.js"></script>
+  <script src="./env.js"></script>
+  <script src="./popup.js"></script>
 </body>
 
 </html>
